# raindrop

./: meson.build
data/: meson.build  pwdraindrop.sh  raindrop.desktop  raindrop.desktop.in  raindrop.ui
debian/: changelog  control  copyright  raindrop.postinst
po/: LINGUAS  POTFILES.in  hy.po  it.po  ja.po  pl.po  pt.po
src/: arc.c  labwc.c  meson.build  openbox.c  raindrop.c  raindrop.h  wayfire.c
